Fixed Aligning

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -215,7 +215,7 @@
   display: flex;
   position: relative;
   width: 90%;
-  margin: 100px auto 0 auto;
+  margin: 60px auto;
   justify-content: center;
 }
 
@@ -228,7 +228,7 @@
   display: flex;
   position: relative;
   justify-content: center;  
-  font-size: 3em;
+  font-size: 3.2em;
   margin: 20px;
   color: #454545;
 }
@@ -236,7 +236,7 @@
 #wrap {
   box-sizing: border-box;
   display: flex;
-  margin: 50px;
+  margin: 100px;
   justify-content: space-around;
   
 }
@@ -308,7 +308,7 @@
   display: inline-flex;
   justify-content: center;
   width: 100%;
-  margin-top: 100px;
+  margin-top: 50px;
   /* border: 1px solid red; */
 }
 
